--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,7 +23,33 @@ body {
     margin-bottom: 40px;
     margin-top: 0px;
 }
+.dropdown-submenu {
+  position: relative;
+}
 
+.dropdown-submenu a::after {
+  transform: rotate(-90deg);
+  position: absolute;
+  right: 3px;
+  top: 40%;
+}
+
+.dropdown-submenu:hover > .dropdown-menu, .dropdown-submenu:focus > .dropdown-menu {
+  display: flex;
+  flex-direction: column;
+  position: absolute !important;
+  margin-top: -30px;
+  left: 100%;
+}
+
+@media (max-width: 992px) {
+  .dropdown-menu {
+    width: 50%;
+  }
+  .dropdown-menu .dropdown-submenu {
+    width: auto;
+  }
+}
 /* Sticky footer styles */
 html {
     position: relative;
